objects/UPC_ExternalCompanyData__c.object
<CustomObject>
    <fields>
        <fullName>IT_budget__c</fullName>
        <label>IT  budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UPC_BackupCapacity__c</fullName>
        <label>Backup capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_CompanyAdditionalName__c</fullName>
        <label>Additional company name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CompanyName__c</fullName>
        <label>Company name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_CorporateGroup__c</fullName>
        <label>Parent Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_DataSource__c</fullName>
        <defaultValue>&quot;Profondia&quot;</defaultValue>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profondia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_DateOfUpdate__c</fullName>
        <label>Date of update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPC_DeepLink__c</fullName>
        <label>Deep Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UPC_EconomicActivityCode__c</fullName>
        <label>Activity code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Fax__c</fullName>
        <label>Fax number international</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_LocationType__c</fullName>
        <label>Type of Location</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfEmployeesOnSites__c</fullName>
        <label>Number of employees on sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfEmployeesOnTotal__c</fullName>
        <label>Number of employees on total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfItEmployees__c</fullName>
        <label>Number of IT employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfPcs__c</fullName>
        <label>Number of PCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfPrinters__c</fullName>
        <label>Number of printers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfServer__c</fullName>
        <label>Number of server</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfSites__c</fullName>
        <label>Number of sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_NumberOfSoftwareDeveloppers__c</fullName>
        <label>Number of software developpers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Phone__c</fullName>
        <label>Phone number international</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UPC_PostOfficeBoxofCity__c</fullName>
        <label>Post office box of city</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_PostalCodeofPostOfficeBox__c</fullName>
        <label>Postal code of post office box</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredCanton__c</fullName>
        <label>Canton</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredCity__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredCountry__c</fullName>
        <label>Country abbreviation</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredPostofficebox__c</fullName>
        <label>Post office box</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredStreet__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_RegisteredZip__c</fullName>
        <label>Postal code / Zip code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_SICSectionCode__c</fullName>
        <label>Activity code (SIC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_Turnover__c</fullName>
        <label>Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_UID__c</fullName>
        <label>UID Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Website__c</fullName>
        <label>Web Addresss</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>USC_ProfondiaNumberOfPcsInCountry__c</fullName>
        <label>Number of PCs in country</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>External Company Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPC_CompanyName__c</columns>
        <columns>UPC_RegisteredCity__c</columns>
        <columns>UPC_RegisteredCanton__c</columns>
        <columns>UPC_EconomicActivityCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal company number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Company Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>